# stochastic-dynamics

./: .dockerignore  .gitignore  CONVENTIONS.md  Dockerfile  Dockerfile.test  README.md  knapsack_overview.md  knapsack_research_paper.md  measurement_collapse.md  path_integral_knapsack.md  path_integral_optimizer.py  path_integral_optimizer_result.py  requirements.txt  research_paper.md  run_tests.sh  stoch_dyn.py
knapsack-optimizer/: benchmarks.py  knapsack_optimizer.py  main.py  pyproject.toml  unistochastic_knapsack_solver.py
knapsack-optimizer/tests/: test_knapsack_optimizer.py  test_unistochastic_knapsack_solver.py
knapsack_solver/: knapsack_optimizer.py
path-integral-optimizer/: main.py  parameter_estimation_result.py  parameter_estimator.py  path_integral_optimizer.py  path_integral_optimizer_result.py  pyproject.toml  synthetic_dataset.py
path-integral-optimizer/path_integral_optimizer/: __init__.py  from_data.py  parameter_estimation_result.py  parameter_estimator.py  path_integral_optimizer.py  path_integral_optimizer_result.py  prior_definition.py
path-integral-optimizer/path_integral_optimizer/dataset/: __init__.py  dataset.py  synthetic_dataset.py
path-integral-optimizer/tests/: test_path_integral_optimizer.py
tests/: test_knapsack_optimizer.py
