[project]
name = "stochastic-dynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.21.0",
    "jax>=0.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "pymc>=5.22.0",
    "pyqt6>=6.9.0",
    "pytensor>=2.30.3",
    "scipy>=1.15.2",
]
